Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8007736

VerifyError for use of static method in interface

XMLWordPrintable

    • b20
    • x86
    • linux_ubuntu
    • Not verified

        A program invoking a static method on an interface is rejected with a java.lang.VerifyError.

        % javac src/StaticMethodInInterface.java src/TestStaticIF.java
        % java -classpath src TestStaticIF


        Exception in thread "main" java.lang.VerifyError: Illegal type at constant pool entry 5 in class TestStaticIF
        Exception Details:
          Location:
            TestStaticIF.main([Ljava/lang/String;)V @11: invokestatic
          Reason:
            Constant pool index 5 is invalid
          Bytecode:
            0000000: b200 0212 0304 bd00 0459 03b8 0005 53b6
            0000010: 0006 57b1

        at java.lang.Class.getDeclaredMethods0(Native Method)
        at java.lang.Class.privateGetDeclaredMethods(Class.java:2467)
        at java.lang.Class.getMethod0(Class.java:2708)
        at java.lang.Class.getMethod(Class.java:1620)
        at sun.launcher.LauncherHelper.validateMainClass(LauncherHelper.java:528)
        at sun.launcher.LauncherHelper.checkAndLoadMain(LauncherHelper.java:510)

          1. StaticMethodInInterface.java
            0.2 kB
            Roger Riggs
          2. TestStaticIF.java
            0.2 kB
            Roger Riggs
          There are no Sub-Tasks for this issue.

              bharadwaj Bharadwaj Yadavalli (Inactive)
              rriggs Roger Riggs
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: