8007736: VerifyError for use of static method in interface

Reviewed-by: mchung